--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,22 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: 'Montserrat', sans-serif;
-	background-color: black;
-	color: white;
 }
 
 .App {
 	background-color: black;
 	color: white;
 	min-height: 100vh;
+	width: 100%;
+	overflow-x: hidden;
+	select: text;
+}
+
+.bgMain {
+	background-image: url('/bg.svg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	background-blend-mode: darken;
 }
