--- a/src/components/pages/Features.css
+++ b/src/components/pages/Features.css
@@ -47,74 +47,6 @@
     line-height: 34px;
     color: #FFFFFF;
 }
-
-.column {
-    float: left;
-    width: 50%;
-    height: 100px;
-    box-sizing: border-box;
-  }
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.card-box{
-    width: 100%;
-    height: 352px;
-}
-/* .column{
+h1{
     background-color: transparent;
-} */
-
-.card1{
-    width: 100%;
-    height: 352px;
-    background-color: transparent;
-}
-
-.card-text1{
-    margin-top: 50px;
-    text-align: center;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 28px;
-    line-height: 34px;
-    color: #FFFFFF;
-}
-
-.card-text2{
-    margin-top: 50px;
-    text-align: center;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 32px;
-    color: #A39E9E;
-}
-
-.text3{
-    margin-bottom: 50px;
-    text-align: center;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 39px;
-    color: #FFFFFF;
-}
-
-.assets-img{
-    
-    left:10%;
-    right:10%;
-    margin-bottom: 100px;
-    width: 80%;
-    height: 949px;
-    position: relative;
-    overflow: hidden;
 }
