--- a/src/styles/Blogs.module.css
+++ b/src/styles/Blogs.module.css
@@ -4,6 +4,7 @@
 	flex-direction: column;
 	gap: 4rem;
 	background-color: black;
+	padding-bottom: 6rem;
 }
 
 .header {
@@ -69,29 +70,36 @@
 
 /* Main Article: why AR tryon......? */
 .mainArticle {
-	display: grid;
-	grid-template-columns: 1fr 1.5fr;
-	width: 72%;
+	/* display: grid; */
+	/* grid-template-columns: 1fr 1.5fr; */
+	/* width: 72%; */
 	background-color: #a026ff;
 	border-radius: 4.4rem;
 	overflow: hidden;
-	margin: 0 auto; /* Center the article */
+	padding: 0;
+	/* margin: 0 auto; Center the article */
 }
 
-.mainArticle > img {
+.mainArticleImage {
+	padding: 0;
+}
+
+.mainArticleImage > img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 }
 
 .mainArticleBody {
-	display: flex;
+	/* display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
+	justify-content: flex-start;*/
 	gap: 1rem;
-	padding: 2rem 1rem;
+	margin: 5% 0 0 0;
+	padding: 2.5rem 1rem;
 	word-wrap: break-word;
 	text-decoration: none;
+	/* background-color: rgba(0, 0, 0, 0.5); */
 }
 
 .mainArticleBody > h2 {
@@ -137,9 +145,10 @@
 	display: grid;
 	grid-gap: 2rem;
 	grid-template-columns: repeat(auto-fill, 350px);
-	width: 100%;
-	justify-content: center;
-	align-content: space-evenly;
+	/* width: 100%; */
+	justify-content: space-around;
+	/* justify-content: center; */
+	/* align-content: space-between; */
 }
 
 /* Card Styles */
@@ -152,6 +161,13 @@
 	flex-direction: column;
 	justify-content: space-between;
 	gap: 1rem;
+
+	padding: 0.2rem;
+}
+
+.blogCard:hover {
+	transform: scale(1.02);
+	/* box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2); */
 }
 
 .blogThumbnail {
@@ -164,18 +180,41 @@
 	border-radius: 2rem;
 }
 
-.blogCategory {
-	font-size: 1.5rem;
-	font-weight: 700;
+.blogTopic {
+	font-size: 1.1rem;
+	font-weight: 600;
 	color: #0099ef;
+	letter-spacing: 0.05rem;
 }
 
 .blogTitle {
-	font-size: 2rem;
-	font-weight: 700;
+	font-weight: 600;
+	font-size: 1.05rem;
+	letter-spacing: 0.03rem;
+	word-wrap: break-word;
 }
 
 .blogLink {
 	text-decoration: none;
+	color: #ffffff;
 	gap: 1rem;
+}
+
+.blogLink:hover {
+	text-decoration: none;
+	color: #ffffff;
+	gap: 1rem;
+}
+
+.loadMoreBtn {
+	width: 80%;
+	max-width: 350px;
+	margin: 0 auto;
+	/* border: none; */
+}
+
+@media screen and (max-width: 768px) {
+	.blogCard {
+		margin: 0 auto;
+	}
 }
