--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -1,6 +1,7 @@
 footer {
     text-align: center;
     background-color: transparent;
+    
 }
 
 .box-col1 {
@@ -22,7 +23,7 @@ footer {
 .footer-h1{
     text-align: left;
     margin-top: 40px;
-    margin-left: 50px;
+    text-align: center;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
@@ -31,13 +32,12 @@ footer {
     color: #ffffff;
 }
 .footer-h2{
-    margin-bottom: 20px;
-    text-align: right;
-    margin-right: 50px;
+    margin-top: 20px;
+    text-align: center;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
-    font-size: 32px;
+    font-size: 3vw;
     line-height: 39px;
     color: #FFFFFF;
 }
@@ -124,8 +124,10 @@ hr.new4 {
 
 .social-logo-size
 {
-    width: 30px;
-    height:30px;
-    padding-left: -5px;
-    margin-right:20px;
+    width: 27px;
+    height:27px;
+}
+
+.letsconnect{
+    background-color: #3CA2ED;
 }
