--- a/src/components/pages/Features.css
+++ b/src/components/pages/Features.css
@@ -1,99 +1,29 @@
-.picture{
-    width: 100%;
-    height: auto;
-}
-
-.image8 {
-    width: 100%;
-    height: 700px;
-    position: relative;
-    overflow: hidden;
-}
-
-.header1 {
-
-    text-align: center;
-    position: absolute;
-    top: 220px;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: fit-content;
-    background-color: transparent;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 50px;
-    line-height: 61px;
-
-    color: #FFFFFF;
-}
-
-.header2 {
-
-    text-align: center;
-    position: absolute;
-    top: 400px;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    float: right;
-    display: block;
-    background-color: transparent;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 28px;
-    line-height: 34px;
-    color: #FFFFFF;
-}
-
-.column {
-    float: left;
-    width: 50%;
-    height: 100px;
-    box-sizing: border-box;
-  }
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.card-box{
-    width: 100%;
-    height: 352px;
-}
-/* .column{
-    background-color: transparent;
-} */
 
 .card1{
     width: 100%;
-    height: 352px;
+    height: auto;
     background-color: transparent;
 }
 
 .card-text1{
-    margin-top: 50px;
+    margin-top: 10px;
+    width:100%;
     text-align: center;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
-    font-size: 28px;
-    line-height: 34px;
+    font-size: 3vw;
     color: #FFFFFF;
 }
-
 .card-text2{
+    width:100%;
     margin-top: 50px;
     text-align: center;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
-    font-size: 26px;
-    line-height: 32px;
+    font-size: 2vw;
+    line-height: 39px;
     color: #A39E9E;
 }
 
@@ -117,4 +47,65 @@
     height: 949px;
     position: relative;
     overflow: hidden;
+    height: fit-content;
+    margin: auto;
 }
+
+.article {
+    height: 50vw;
+    position: relative;
+    overflow: hidden;
+}
+
+.picture {
+    object-fit: cover;
+    width: 100%;
+    height: fit-content;
+}
+
+.header {
+    
+    text-align: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: fit-content;
+    margin: auto;
+    
+}
+.header1 {
+    
+    text-align: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: fit-content;
+    margin: auto;
+}
+
+.headertext1{
+    background-color: transparent;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 3vw;
+    line-height: 34px;
+    color: #ffffff;
+}
+
+
+.social-logo-size{
+    width:3vw;
+    height:3vw;
+}
+
+.image{
+    width: 100%;
+    height: fit-content;
+}
+
+
