--- a/src/styles/Blogs.module.css
+++ b/src/styles/Blogs.module.css
@@ -45,11 +45,21 @@
 	border-radius: 5rem;
 	height: 3.3rem;
 	padding: 0.4rem;
-	overflow: hidden;
+	overflow-y: hidden;
+	overflow-x: scroll;
+
+	-ms-overflow-style: none;
+	/* Firefox */
+	scrollbar-width: none; 
 }
 
-.tabbar > button {
-	height: 100%;
+.tabbar::-webkit-scrollbar {
+	display: none;
+}
+
+.topicBtn {
+	height: 40px;
+	width: fit-content;
 	background-color: transparent;
 	border: none;
 	color: #ffffff;
@@ -57,14 +67,21 @@
 	padding: 0.2rem 1.2rem;
 	outline: none;
 	font-weight: 600;
+	scroll-behavior: smooth;
+	display: inline-block;
+	word-break: keep-all;
+	white-space: nowrap;
+	word-wrap: none;
+	/* overflow-y: hidden; */
 }
 
-.tabbar > button:hover {
+.topicBtn:hover {
 	background-color: #ffffff;
 	color: #333333;
+	transform: scale(1.03);
 }
 
-.selectedTab {
+.selected {
 	background-color: #ffffff;
 	color: #333333;
 }
@@ -155,9 +172,9 @@
 /* Card Styles */
 .blogCard {
 	width: 100%;
-	max-width: 400px;
+	/* max-width: 400px; */
 	height: fit-content;
-	min-height: 500px;
+	min-height: 400px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -173,7 +190,7 @@
 
 .blogThumbnail {
 	width: 100%;
-	height: 100%;
+	/* height: 100%; */
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -214,8 +231,11 @@
 	/* border: none; */
 }
 
-@media screen and (max-width: 768px) {
-	.blogCard {
-		margin: 0 auto;
+@media screen and (max-width: 666px) {
+	.mainArticle {
+		border-radius: 2.2rem;
+	}
+	.header > * {
+		width: 99%;
 	}
 }
