--- a/src/components/pages/About.css
+++ b/src/components/pages/About.css
@@ -70,7 +70,8 @@
 }
 
 .about-us-box p {
-	width: 50%;
+	width: 80%;
+	max-width: 700px;
 	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 600;
@@ -279,151 +280,141 @@
 }
 
 .heading {
-    font-weight: 600;
+	font-weight: 600;
 	font-size: 2.3rem;
 	text-align: center;
-    margin: 1rem auto;
+	margin: 1rem auto;
 }
 
 .cardsGrid {
-    position: relative;
-    display: grid;
-    grid-gap: 2rem;
-    grid-template-columns: repeat(auto-fill, 350px);
-    width: 100%;
-    justify-content: center;
-    align-content: space-between;
-    margin: 2rem auto 5rem auto;
+	position: relative;
+	display: grid;
+	grid-gap: 2rem;
+	grid-template-columns: repeat(auto-fill, 350px);
+	width: 100%;
+	justify-content: center;
+	align-content: space-between;
+	margin: 2rem auto 5rem auto;
 }
 
 /* vision card styles */
 
 .visionBox {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-    margin: 2rem auto;
-
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	gap: 1.5rem;
+	margin: 2rem auto;
 }
 
 .visionCard {
-    width: 350px;
-    height: 480px;
-    border-radius: 20px;
-    overflow: hidden;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
-    position: relative;
-    padding: 0.3rem;
-    display: flex;
-    flex-direction: column;
+	width: 350px;
+	height: 480px;
+	border-radius: 20px;
+	overflow: hidden;
+	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1.4rem;
+	align-items: start;
+	background-color: #fff;
+	position: relative;
+	padding: 1.3rem;
 }
 
 .visionCard img {
-    position: absolute;
-    top: 2.2rem;
-    left: 2.2rem;
-    width: 80px;
-    height: 80px;
-    object-fit: cover;
+	width: 80px;
+	height: 80px;
+	object-fit: cover;
 }
 
 .visionCard h2 {
-    position: absolute;
-    top: 10rem;
-    left: 2.2rem;
-    font-size: 1.3rem;
-    font-weight: 600;
-    color: #000;
+	font-size: 1.3rem;
+	font-weight: 600;
+	color: #000;
 }
 
 .visionCard p {
-    position: absolute;
-    top: 13rem;
-    left: 2rem;
-    font-size: 1rem;
-    font-weight: 400;
-    color: #000;
-    padding: 0.5rem 0.7rem;
+	font-size: 1rem;
+	font-weight: 400;
+	color: #000;
+	padding: 0.3rem;
+	background-color: #fff;
 }
 
 /* Creator cards styles */
-.creatorCard{
-    width: 350px;
-    height: 480px;
-    border-radius: 20px;
-    overflow: hidden;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
-    position: relative;
-    padding: 0.3rem;
+.creatorCard {
+	width: 350px;
+	height: 480px;
+	border-radius: 20px;
+	overflow: hidden;
+	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	background-color: #fff;
+	position: relative;
+	padding: 0.3rem;
 }
 
-.visionCard:hover, .creatorCard:hover {
-    box-shadow: 0px 16px 10px 7px rgb(23 0 104 / 50%);;
-    transform: scale(1.02);
+.visionCard:hover,
+.creatorCard:hover {
+	box-shadow: 0px 16px 10px 7px rgb(23 0 104 / 50%);
+	transform: scale(1.02);
 }
 
 .creatorImage {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .creatorInfo {
-    position: absolute;
-    bottom: 0.7rem;
-    left: 0.7rem;
-    right: 0.7rem;
-    display: flex;
-    flex-direction: column;
-    background-color: rgba(0, 0, 0, 1);
-    padding: 0.5rem 0.9rem;
-    width: 95%;
-    margin: 0 auto;
-    border-radius: 14px;
+	position: absolute;
+	bottom: 0.7rem;
+	left: 0.7rem;
+	right: 0.7rem;
+	display: flex;
+	flex-direction: column;
+	background-color: rgba(0, 0, 0, 1);
+	padding: 0.5rem 0.9rem;
+	width: 95%;
+	margin: 0 auto;
+	border-radius: 14px;
 }
 
 .creatorName {
-    font-weight: 800;
-    color: white;
-    font-size: 1rem;
+	font-weight: 800;
+	color: white;
+	font-size: 1rem;
 }
 
 .creatorRole {
-    font-weight: 600;
-    font-size: 0.8rem;
-    color: rgb(130, 130, 130);
+	font-weight: 600;
+	font-size: 0.8rem;
+	color: rgb(130, 130, 130);
 }
 
 .creatorInfo img {
-    position: absolute;
-    right: 0.4rem;
-    bottom: 0.9rem;
-    width: 33px;
-    height: 33px;
+	position: absolute;
+	right: 0.4rem;
+	bottom: 0.9rem;
+	width: 33px;
+	height: 33px;
 }
 .creatorInfo svg {
-    position: absolute;
-    right: 1rem;
-    bottom: 1rem;
-    width: 30px;
-    height: 30px;
+	position: absolute;
+	right: 1rem;
+	bottom: 1rem;
+	width: 30px;
+	height: 30px;
 }
 
 @media only screen and (max-width: 850px) {
@@ -432,7 +423,8 @@
 	}
 
 	.visionBox {
-        flex-direction: column;
+		flex-direction: column;
+		justify-content: space-evenly;
 	}
 }
 
@@ -445,11 +437,16 @@
 		line-height: 1.2rem;
 	}
 
-    .cardsGrid {
-        grid-template-columns: repeat(auto-fill, 250px);
-    }
-    .creatorCard{
-        width: 250px;
-        height: 350px;
-    }
+	.cardsGrid {
+		grid-template-columns: repeat(auto-fill, 270px);
+	}
+	.creatorCard {
+		width: 270px;
+		height: 400px;
+	}
+
+	.visionCard {
+		width: 280px;
+		height: 400px;
+	}
 }
