--- a/src/styles/Blogs.module.css
+++ b/src/styles/Blogs.module.css
@@ -50,7 +50,7 @@
 
 	-ms-overflow-style: none;
 	/* Firefox */
-	scrollbar-width: none; 
+	scrollbar-width: none;
 }
 
 .tabbar::-webkit-scrollbar {
@@ -123,9 +123,10 @@
 .mainArticleBody > h2 {
 	font-size: 2.5rem;
 	font-weight: 500;
+	line-height: 0.9rem;
 	color: #ffffff;
-	letter-spacing: 0.2rem;
-	line-height: 3.3rem;
+	letter-spacing: 0.3rem;
+	line-height: 4rem;
 }
 
 .mainArticleBody > p {
@@ -183,7 +184,6 @@
 	padding: 0.2rem;
 }
 
-
 .blogThumbnail {
 	width: 100%;
 	/* height: 100%; */
@@ -235,6 +235,8 @@
 @media screen and (max-width: 666px) {
 	.mainArticle {
 		border-radius: 2.2rem;
+		width: 100%;
+		margin: 0 auto;
 	}
 	.header > * {
 		width: 99%;
