--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -4,23 +4,6 @@ footer {
     
 }
 
-.box-col1 {
-    
-    float: left;
-    width: 50%;
-    padding: 10px;
-    height: 143px; 
-    background-color: #3CA2ED;
-}
-
-.box-col2 {
-    
-    float: right;
-    width: 50%;
-    padding: 10px;
-    height: 143px; 
-    background-color: #3CA2ED;
-}
 
 .footer-h2{
     margin-left: 5px;
@@ -48,8 +31,13 @@ footer {
     color: #FFFFFF;
 }
 
+.gridcol {
+        
+    background-color: transparent;
+}
 .list{
     padding-left:5px;
+    background-color: transparent;
 }
 
 ul li{
@@ -58,6 +46,7 @@ ul li{
     text-align: left;
     margin: 0;
     padding: 0;
+    background-color: transparent;
 }
 
 hr.new4 {
@@ -94,7 +83,7 @@ hr.new4 {
     display: grid;
     box-sizing: border-box;
     grid-template-columns: 40% 35% 25%;
-    background-color: transparent;
+    background-color: transparent !important;
     padding: 10px;
     height: auto;
 }
@@ -154,6 +143,10 @@ hr.new4 {
         line-height: 20px;
         color: #ffffff;
     }
+    .gridcol {
+        
+        background-color: transparent;
+    }
 }
   
 @media screen and (max-width: 625px) {
@@ -206,6 +199,10 @@ hr.new4 {
         line-height: 10px;
         color: #ffffff;
       }
+      .gridcol {
+        
+        background-color: transparent;
+    }
   }
 
 .socialimages {
