--- a/src/components/layout/NewNavbar.css
+++ b/src/components/layout/NewNavbar.css
@@ -2,7 +2,7 @@
 
 /* Navbar */
 .emptyBlock {
-	height: 49px;
+	height: 60px;
 }
 
 .navbar input[type='checkbox'],
@@ -13,7 +13,7 @@
 .nav-container {
 	max-width: 1400px;
 	width: 95%;
-	margin: auto;
+	margin: 0 auto;
 	user-select: none;
 }
 
@@ -27,7 +27,7 @@
 .navbar-container {
 	display: flex;
 	justify-content: space-between;
-	height: 50px;
+	height: 42px;
 	align-items: center;
 }
 
@@ -113,10 +113,10 @@
 
 	.navbar-container .hamburger-lines {
 		/* display: block; */
-		height: 28px;
-		width: 35px;
+		height: 22px;
+		width: 28px;
 		position: absolute;
-		top: 10px;
+		top: 12px;
 		right: 0px;
 		z-index: 2;
 		display: flex;
@@ -151,7 +151,7 @@
 	.menu-items {
 		padding-top: 100px;
 		height: 66vh;
-		width: 220px;
+		width: 250px;
 		padding: 6rem 0.5rem;
 		transform: translate(150%);
 		display: flex;
@@ -198,7 +198,7 @@
 
 @media (max-width: 500px) {
 	.navbar-container input[type='checkbox']:checked ~ .logo {
-		display: none;
+		/* display: none; */
 	}
 }
 
