--- a/src/components/pages/Features.css
+++ b/src/components/pages/Features.css
@@ -1,190 +1,177 @@
-
-.card1{
-    width: 100%;
-    height: auto;
-    background-color: transparent;
+.card1 {
+	width: 100%;
+	height: auto;
+	background-color: transparent;
 }
 
-.assets-img{
-    
-    left:10%;
-    right:10%;
-    margin-bottom: 100px;
-    width: 80%;
-    height: 949px;
-    position: relative;
-    overflow: hidden;
-    height: fit-content;
-    margin: auto;
+.assets-img {
+	left: 10%;
+	right: 10%;
+	margin-bottom: 100px;
+	width: 80%;
+	height: 949px;
+	position: relative;
+	overflow: hidden;
+	height: fit-content;
+	margin: auto;
 }
 
 .article {
-    height: auto;
-    position: relative;
-    overflow: hidden;
+	height: auto;
+	position: relative;
+	overflow: hidden;
 }
 
 .picture {
-    object-fit: cover;
-    width: 100%;
-    height: fit-content;
+	object-fit: cover;
+	width: 100%;
+	height: fit-content;
 }
 
 .header {
-    
-    text-align: center;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: fit-content;
-    margin: auto;
-    
+	text-align: center;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: fit-content;
+	margin: auto;
 }
 .header1 {
-    
-    text-align: center;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: fit-content;
-    margin: auto;
+	text-align: center;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: fit-content;
+	margin: auto;
 }
 
-
-.social-logo-size{
-    width:2vw;
-    height:2vw;
+.social-logo-size {
+	width: 2vw;
+	height: 2vw;
 }
 
-.image{
-    width: 100%;
-    height: fit-content;
+.image {
+	width: 100%;
+	max-height: 92vh;
+	object-fit: cover;
 }
 
 @media screen and (min-width: 626px) {
-    .headertext1 {
-        
-        background-color: transparent;
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 4vw;
-        line-height: 4vw;
-        color: #ffffff;
-    }
-    .headertext2 {
-        
-        background-color: transparent;
-        margin-top: -10px;
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 600;
-        font-size: 2vw;
-        line-height: 100px;
-        color: #ffffff;
-    }
-    .card-text1{
-        margin-top: 4vw;
-        width: 100%;
-        text-align: center;
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 3vw;
-        line-height: 1vw;
-        color: #FFFFFF;
-    }
-    .card-text2{
-        width: 100%;
-        margin-top: 4vw;
-        text-align: center;
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 2.2vw;
-        line-height: 3vw;
-        color: #A39E9E;
-    }
-    .text3{
-        margin-bottom: 4vw;
-        text-align: center;
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 2.5vw;
-        line-height: 2vw;
-        color: #FFFFFF;
-    }
-  }
-  
-  @media screen and (max-width: 625px) {
-    .headertext1 {
-        
-        background-color: transparent;
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 3vw;
-        line-height: 2vw;
-        color: #ffffff;
-    }
-    .headertext2 {
-        
-        background-color: transparent;
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 3vw;
-        line-height: 4px;
-        color: #ffffff;
-    }
-    .template-col{
-        height: fit-content;
-    }
-    .card-text1{
-        margin-top: 10px;
-        width: 100%;
-        text-align: center;
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 4vw;
-        line-height: 4vw;
-        color: #FFFFFF;
-    }
-    .card-text2{
-        width: 100%;
-        text-align: center;
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 3vw;
-        line-height: 5vw;
-        color: #A39E9E;
-        margin-bottom: 5px;
-    }
-    .text3{
-        margin-left: 1vw;
-        margin-right: 1vw;
-        margin-bottom: 3vw;
-        text-align: center;
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 3vw;
-        line-height: 7vw;
-        color: #FFFFFF;
-    }
-  }
+	.headertext1 {
+		background-color: transparent;
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 700;
+		font-size: 4vw;
+		line-height: 4vw;
+		color: #ffffff;
+	}
+	.headertext2 {
+		background-color: transparent;
+		margin-top: -10px;
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 600;
+		font-size: 2vw;
+		line-height: 100px;
+		color: #ffffff;
+	}
+	.card-text1 {
+		margin-top: 4vw;
+		width: 100%;
+		text-align: center;
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 700;
+		font-size: 3vw;
+		line-height: 1vw;
+		color: #ffffff;
+	}
+	.card-text2 {
+		width: 100%;
+		margin-top: 4vw;
+		text-align: center;
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 700;
+		font-size: 2.2vw;
+		line-height: 3vw;
+		color: #a39e9e;
+	}
+	.text3 {
+		margin-bottom: 4vw;
+		text-align: center;
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 700;
+		font-size: 2.5vw;
+		line-height: 2vw;
+		color: #ffffff;
+	}
+}
+
+@media screen and (max-width: 625px) {
+	.headertext1 {
+		background-color: transparent;
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 700;
+		font-size: 3vw;
+		line-height: 2vw;
+		color: #ffffff;
+	}
+	.headertext2 {
+		background-color: transparent;
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 500;
+		font-size: 3vw;
+		line-height: 4px;
+		color: #ffffff;
+	}
+	.template-col {
+		height: fit-content;
+	}
+	.card-text1 {
+		margin-top: 10px;
+		width: 100%;
+		text-align: center;
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 700;
+		font-size: 4vw;
+		line-height: 4vw;
+		color: #ffffff;
+	}
+	.card-text2 {
+		width: 100%;
+		text-align: center;
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 700;
+		font-size: 3vw;
+		line-height: 5vw;
+		color: #a39e9e;
+		margin-bottom: 5px;
+	}
+	.text3 {
+		margin-left: 1vw;
+		margin-right: 1vw;
+		margin-bottom: 3vw;
+		text-align: center;
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 700;
+		font-size: 3vw;
+		line-height: 7vw;
+		color: #ffffff;
+	}
+}
 
 .template1 {
-    flex-wrap: wrap-reverse;
-        
+	flex-wrap: wrap-reverse;
 }
-  
-  
-  
