--- a/src/styles/service.css
+++ b/src/styles/service.css
@@ -228,7 +228,7 @@ span{
     font-weight: bold;
 }
 
-@media screen and (max-width:348px) {
+@media screen and (max-width:426px) {
     .toggle-button1,.toggle-button2{
         width: 130px;
     }
@@ -238,5 +238,21 @@ span{
     }
     .why h2{   
      margin-left: -6px;
+    }
+    .shopify button{
+        margin-top: 80px;
+        margin-bottom: 30px;
+    }
+    .demo-button{
+        align-items: center;
+    }
+
+    @media screen and (min-width:992px) and (max-width:1200px){
+        .service{
+            height: 400vh;
+            background-color: #A026FF;
+            color:black;
+        }
+        
     }
 }
