--- a/src/components/pages/About.css
+++ b/src/components/pages/About.css
@@ -62,7 +62,7 @@
 	text-align: center;
 } */
 
-.about-page .about-us-box .details {
+.about-page .about-us-box .about_details {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -272,21 +272,21 @@
 }
 
 /* Modifications by Prashant */
-.moto {
+.about_moto {
 	padding: 2.4rem 0.2rem;
 	width: 95%;
 	max-width: 1100px;
 	margin: 0 auto;
 }
 
-.heading {
+.about_heading {
 	font-weight: 600;
 	font-size: 2.3rem;
 	text-align: center;
 	margin: 1rem auto;
 }
 
-.cardsGrid {
+.about_cards_grid {
 	position: relative;
 	display: grid;
 	grid-gap: 2rem;
@@ -418,7 +418,7 @@
 }
 
 @media only screen and (max-width: 850px) {
-	.heading {
+	.about_heading {
 		font-size: 1.9rem;
 	}
 
@@ -429,7 +429,7 @@
 }
 
 @media only screen and (max-width: 600px) {
-	.heading {
+	.about_heading {
 		font-size: 1.4rem;
 	}
 	.about-us-box p {
@@ -437,7 +437,7 @@
 		line-height: 1.2rem;
 	}
 
-	.cardsGrid {
+	.about_cards_grid {
 		grid-template-columns: repeat(auto-fill, 270px);
 	}
 	.creatorCard {
